source/yaml_file/ingress_flask/flask-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: svc-flaskapp
  namespace: web-demo
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: flaskapp.baidu.com
    http:
      paths:
      - backend:
          serviceName: svc-flaskapp
          servicePort: 5000
